--- a/project/slider.html
+++ b/project/slider.html
@@ -34,28 +34,28 @@
         <div class="card-wrapper swiper-wrapper">
           <div class="card swiper-slide">
             <div class="image-box">
-                <img src="1.png" alt="">
+                <img src="design uiux web.png" alt="">
             </div>
             <div class="details">
               <div class="title-desc">
-                <h3 class="title">Project 1</h3>
-                <h4 class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repellat nisi facere molestias voluptate perspiciatis debitis harum explicabo a voluptatum placeat fugiat, totam, expedita quia eveniet ut saepe consequatur quos?</h4>
+                <h3 class="title">UI UX Web</h3>
+                <h4 class="desc">Gambaran kasar mengenai perancangan UI UX Web untuk pengumpulan tugas mata kuliah Elektronika selanjutnya.</h4>
                 <div class="main-btn">
-                  <a href="#" class="btn">View More</a>
+                  <a href="design ui ux.html" class="btn">View More</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="card swiper-slide">
             <div class="image-box">
-              <img src="2.png" alt="">
+              <img src="nilai resistif.png" alt="">
             </div>
             <div class="details">
               <div class="title-desc">
-                <h3 class="title">Project 2</h3>
-                <h4 class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repellat nisi facere molestias voluptate perspiciatis debitis harum explicabo a voluptatum placeat fugiat, totam, expedita quia eveniet ut saepe consequatur quos?</h4>
+                <h3 class="title">Identifikasi Nilai Resistif</h3>
+                <h4 class="desc">Kode warna resistor adalah pita berwarna yang mengidentifikasikan nilai resistif (resistansi) dan persentase toleransinya dengan ukuran fisik resistor yang menunjukkan peringkat wattnya. Warna pada pita warna atau gelang resistor menunjukkan nilai yang berbeda.</h4>
                 <div class="main-btn">
-                  <a href="#" class="btn">View More</a>
+                  <a href="nilai resistif.html" class="btn">View More</a>
                 </div>
               </div>
             </div>
