--- a/project/slider.html
+++ b/project/slider.html
@@ -62,14 +62,14 @@
           </div>
           <div class="card swiper-slide">
             <div class="image-box">
-              <img src="3.png" alt="">
+              <img src="ekstrin.png" alt="">
             </div>
             <div class="details">
               <div class="title-desc">
-                <h3 class="title">Project 3</h3>
-                <h4 class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repellat nisi facere molestias voluptate perspiciatis debitis harum explicabo a voluptatum placeat fugiat, totam, expedita quia eveniet ut saepe consequatur quos?</h4>
+                <h3 class="title">Eksperimen TRIN</h3>
+                <h4 class="desc">Proteus Design Suite adalah suite alat perangkat lunak berpemilik yang digunakan terutama untuk otomatisasi desain elektronik. Perangkat lunak ini digunakan terutama oleh insinyur dan teknisi desain elektronik untuk membuat skema dan cetakan elektronik untuk pembuatan papan sirkuit tercetak.</h4>
                 <div class="main-btn">
-                  <a href="#" class="btn">View More</a>
+                  <a href="eksperimen_trin.html" class="btn">View More</a>
                 </div>
               </div>
             </div>
