--- a/project/slider.html
+++ b/project/slider.html
@@ -76,14 +76,14 @@
           </div>
           <div class="card swiper-slide">
             <div class="image-box">
-              <img src="4.png" alt="">
+              <img src="dioda ab.jpg" alt="">
             </div>
             <div class="details">
               <div class="title-desc">
-                <h3 class="title">Project 4</h3>
-                <h4 class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repellat nisi facere molestias voluptate perspiciatis debitis harum explicabo a voluptatum placeat fugiat, totam, expedita quia eveniet ut saepe consequatur quos?</h4>
+                <h3 class="title">Diode Simulation</h3>
+                <h4 class="desc">Dioda merupakan komponen semikonduktor yang paling sederhana. Kata dioda berasal dari pendekatan kata yaitu dua elektroda yang mana (di berarti dua) mempunyai dua buah elektroda yaitu anoda dan katoda.</h4>
                 <div class="main-btn">
-                  <a href="#" class="btn">View More</a>
+                  <a href="dioda.html" class="btn">View More</a>
                 </div>
               </div>
             </div>
